# cpp_project_in_github

./: CMakeLists.txt  NOTICE.md  README.md  main.cpp
.github/ISSUE_TEMPLATE/: CHANGELOG.md  CMakeLists.txt
.github/workflows/: cmake_arm.yml  cmake_x64.yml  codeql.yml
ISSUE_TEMPLATE/: CMakeLists.txt
calculator/: calculator.cpp  calculator.h
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt  test_calculator.cpp
test/main/: CMakeLists.txt
